code (testing): setting up infrastructure for CI

--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -39,7 +39,7 @@
     "    Standardize read counts by calculating reads per million, \n",
     "    adding a pseudo-count of one, and taking the log2\n",
     "    \n",
-    "    reads: numpy or pandas array\n",
+    "    reads: numpy or pandas array |\n",
     "    returns: numpy or pandas array\n",
     "    \"\"\"\n",
     "    reads_per_million = (reads/reads.sum())*(10**6)\n",
@@ -51,8 +51,8 @@
     "    \"\"\"\n",
     "    Calculate lognorms for specified columns\n",
     "    \n",
-    "    reads_df: dataframe\n",
-    "    columns: list\n",
+    "    reads_df: dataframe |\n",
+    "    columns: list |\n",
     "    returns: lognorm dataframe\n",
     "    \"\"\"\n",
     "    lognorm_df = reads_df.copy()\n",
@@ -315,10 +315,10 @@
     "    \"\"\"\n",
     "    Filter the lognorm dataframe based on the z_scored lognorms of pDNA\n",
     "    \n",
-    "    lognorm_df: dataframe\n",
-    "    pdna_cols: list\n",
-    "    z_low: int or None, lower range of z-scores to filter\n",
-    "    z_high: int or None, uppper range of z-scores to filter\n",
+    "    lognorm_df: dataframe |\n",
+    "    pdna_cols: list |\n",
+    "    z_low: int or None, lower range of z-scores to filter |\n",
+    "    z_high: int or None, uppper range of z-scores to filter |\n",
     "    returns: filtered dataframe\n",
     "    \"\"\"\n",
     "    filtered_lognorms = lognorm_df.copy()\n",
@@ -574,15 +574,15 @@
     "    \"\"\"\n",
     "    Average log-fold changes of sgRNAs across replicates\n",
     "    \n",
-    "    lfcs: dataframe\n",
-    "    guide_col: str, sgrna column name\n",
+    "    lfcs: dataframe |\n",
+    "    guide_col: str, sgrna column name |\n",
     "    condition_indices: list of int, specifies which elements to use \n",
-    "        for conditions after separating column names with sep\n",
-    "    sep: str, separator in column names\n",
-    "    lfc_cols: list or None, lfc column(s) to melt. If None use all columns that are not guide_col\n",
-    "    condition_name: str, name of condition columns\n",
-    "    lfc_name: str, name of new column with log-fold changes\n",
-    "    returns: dataframe of average lfcs\n",
+    "        for conditions after separating column names with sep |\n",
+    "    sep: str, separator in column names |\n",
+    "    lfc_cols: list or None, lfc column(s) to melt. If None use all columns that are not guide_col |\n",
+    "    condition_name: str, name of condition columns |\n",
+    "    lfc_name: str, name of new column with log-fold changes |\n",
+    "    returns: dataframe of average lfcs |\n",
     "    \"\"\"\n",
     "    if lfc_cols is None:\n",
     "        if not (lfcs.drop(guide_col,axis=1)\n",
@@ -638,13 +638,13 @@
     "    Remap annotations dataframe such that control genes are grouped into \n",
     "    pseudo-genes\n",
     "    \n",
-    "    annotations: dataframe\n",
-    "    pseudogene_size: int\n",
-    "    gene_col: str\n",
+    "    annotations: dataframe |\n",
+    "    pseudogene_size: int |\n",
+    "    gene_col: str |\n",
     "    control_regex: list of str, regular expressions to identify groups of \n",
-    "        pseudogenes\n",
-    "    seed: int, random seed for reproducible outputs\n",
-    "    returns: dataframe of annotations with controls grouped into pseudogenes\n",
+    "        pseudogenes |\n",
+    "    seed: int, random seed for reproducible outputs |\n",
+    "    returns: dataframe of annotations with controls grouped into pseudogenes |\n",
     "    \"\"\"\n",
     "    remapped_annotations = annotations.copy()\n",
     "    genes = remapped_annotations[gene_col]\n",
@@ -952,21 +952,21 @@
     "    \"\"\"\n",
     "    Average log-fold changes of sgRNAs across genes\n",
     "    \n",
-    "    lfcs: dataframe\n",
-    "    annotations: dataframe, mapping between sgRNAs and genes\n",
-    "    gene_col: str, column which uniquely identifies a gene\n",
-    "    condition_col: str, column which uniquely identifies experimental conditions\n",
-    "    lfc_col: str, name of value to average\n",
+    "    lfcs: dataframe |\n",
+    "    annotations: dataframe, mapping between sgRNAs and genes |\n",
+    "    gene_col: str, column which uniquely identifies a gene |\n",
+    "    condition_col: str, column which uniquely identifies experimental conditions |\n",
+    "    lfc_col: str, name of value to average |\n",
     "    merge_on: str or None, name of sgRNA column to merge on. Must be present in both \n",
     "        lfc and annotation dataframes if supplied, \n",
-    "        otherwise supply unique merge column to each\n",
-    "    lfc_merge_on: str or None, name of sgRNA column to merge on\n",
+    "        otherwise supply unique merge column to each |\n",
+    "    lfc_merge_on: str or None, name of sgRNA column to merge on |\n",
     "    annotation_merge_on: str, name of sgRNA column to merge on. Present in \n",
-    "        annotation dataframe if supplied\n",
+    "        annotation dataframe if supplied |\n",
     "    controls_to_z: str or list of str or None, if supplied specifies\n",
     "        control genes for z-scoring log-fold changes\n",
     "        if string then interpreted as a regex \n",
-    "        otherwise interpreted as a list of gene names found in gene_col \n",
+    "        otherwise interpreted as a list of gene names found in gene_col |\n",
     "    returns: dataframe, lfcs and (optionally) z-scores averaged by gene\n",
     "    \"\"\"\n",
     "    annotated_lfcs = lfcs.merge(annotations, how='inner', on=merge_on, left_on=lfc_merge_on, right_on=annotation_merge_on)\n",
@@ -1215,12 +1215,12 @@
     "    \"\"\"\n",
     "    Calculate the ROC-AUC between true positive and false positive gene sets\n",
     "    \n",
-    "    lfcs: dataframe\n",
-    "    tp_genes: list-like, true positive genes\n",
-    "    fp_genes: list-like, false positive genes\n",
-    "    gene_col: str\n",
-    "    score_col: str, column to use for ranking genes from smallest to largest\n",
-    "    group_col: list, columns to use for grouping genes\n",
+    "    lfcs: dataframe |\n",
+    "    tp_genes: list-like, true positive genes |\n",
+    "    fp_genes: list-like, false positive genes |\n",
+    "    gene_col: str |\n",
+    "    score_col: str, column to use for ranking genes from smallest to largest |\n",
+    "    group_col: list, columns to use for grouping genes |\n",
     "    returns: datafrme of roc_aucs\n",
     "    \"\"\"\n",
     "    roc_df = lfcs.copy()\n",
