--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -261,7 +261,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To mitigate this tail and account for sequencing biases we log-normalize read counts by taking $$ \\log_2 \\left ( \\frac{\\text{reads}}{\\text{total reads in condition}} * 10^6 + 1 \\right )$$"
+    "To mitigate this tail and account for sequencing biases we log-normalize read counts by taking $$ \\log_2 \\left ( \\frac{\\text{reads}}{\\text{total reads in condition}} * 10^6 + 1 \\night )$$"
    ]
   },
   {
