docs (readme): remove table outputs as they don't render in md

--- a/index.ipynb
+++ b/index.ipynb
@@ -64,139 +64,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>sgRNA Sequence</th>\n",
-       "      <th>pDNA</th>\n",
-       "      <th>A375_RepA</th>\n",
-       "      <th>A375_RepB</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>AAAAAAAATCCGGACAATGG</td>\n",
-       "      <td>522</td>\n",
-       "      <td>729</td>\n",
-       "      <td>774</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>AAAAAAAGGATGGTGATCAA</td>\n",
-       "      <td>511</td>\n",
-       "      <td>1484</td>\n",
-       "      <td>1393</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>AAAAAAATGACATTACTGCA</td>\n",
-       "      <td>467</td>\n",
-       "      <td>375</td>\n",
-       "      <td>603</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>AAAAAAATGTCAGTCGAGTG</td>\n",
-       "      <td>200</td>\n",
-       "      <td>737</td>\n",
-       "      <td>506</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>AAAAAACACAAGCAAGACCG</td>\n",
-       "      <td>286</td>\n",
-       "      <td>672</td>\n",
-       "      <td>352</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>77436</th>\n",
-       "      <td>TTTGTTTGGATTGCTTCAAG</td>\n",
-       "      <td>514</td>\n",
-       "      <td>2878</td>\n",
-       "      <td>303</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>77437</th>\n",
-       "      <td>TTTTACCTTGTTCACATGGA</td>\n",
-       "      <td>828</td>\n",
-       "      <td>3896</td>\n",
-       "      <td>3367</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>77438</th>\n",
-       "      <td>TTTTGACTCTAATCACCGGT</td>\n",
-       "      <td>588</td>\n",
-       "      <td>2725</td>\n",
-       "      <td>2498</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>77439</th>\n",
-       "      <td>TTTTTAATACAAGGTAATCT</td>\n",
-       "      <td>503</td>\n",
-       "      <td>2209</td>\n",
-       "      <td>1785</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>77440</th>\n",
-       "      <td>TTTTTCTCACCCGATGAATC</td>\n",
-       "      <td>661</td>\n",
-       "      <td>3198</td>\n",
-       "      <td>3189</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>77441 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "             sgRNA Sequence  pDNA  A375_RepA  A375_RepB\n",
-       "0      AAAAAAAATCCGGACAATGG   522        729        774\n",
-       "1      AAAAAAAGGATGGTGATCAA   511       1484       1393\n",
-       "2      AAAAAAATGACATTACTGCA   467        375        603\n",
-       "3      AAAAAAATGTCAGTCGAGTG   200        737        506\n",
-       "4      AAAAAACACAAGCAAGACCG   286        672        352\n",
-       "...                     ...   ...        ...        ...\n",
-       "77436  TTTGTTTGGATTGCTTCAAG   514       2878        303\n",
-       "77437  TTTTACCTTGTTCACATGGA   828       3896       3367\n",
-       "77438  TTTTGACTCTAATCACCGGT   588       2725       2498\n",
-       "77439  TTTTTAATACAAGGTAATCT   503       2209       1785\n",
-       "77440  TTTTTCTCACCCGATGAATC   661       3198       3189\n",
-       "\n",
-       "[77441 rows x 4 columns]"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "supp_reads = 'https://static-content.springer.com/esm/art%3A10.1038%2Fs41467-018-07901-8/MediaObjects/41467_2018_7901_MOESM4_ESM.xlsx'\n",
     "read_counts = pd.read_excel(supp_reads,\n",
@@ -205,9 +73,7 @@
     "                            skiprows = 3, \n",
     "                            names = ['sgRNA Sequence', 'pDNA', 'A375_RepA', 'A375_RepB'])\n",
     "guide_annotations = pd.read_excel(supp_reads,\n",
-    "                                  sheet_name='sgRNA annotations')\n",
-    "\n",
-    "read_counts"
+    "                                  sheet_name='sgRNA annotations')"
    ]
   },
   {
@@ -333,54 +199,17 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>condition</th>\n",
-       "      <th>ROC-AUC</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>A375</td>\n",
-       "      <td>0.976469</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  condition   ROC-AUC\n",
-       "0      A375  0.976469"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ROC-AUC: 0.976\n"
+     ]
     }
    ],
    "source": [
     "roc_aucs = pool.get_roc_aucs(lfcs=gene_lfcs, tp_genes=ess_genes.gene, fp_genes=noness_genes.gene, gene_col='Annotated Gene Symbol')\n",
     "assert roc_aucs['ROC-AUC'][0] > 0.9\n",
-    "roc_aucs"
+    "print('ROC-AUC: ' + str(round(roc_aucs['ROC-AUC'].values[0], 3)))"
    ]
   }
  ],
