--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -261,7 +261,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To mitigate this tail and account for sequencing biases we log-normalize read counts by taking $$ \\log_2 \\left ( \\frac{\\text{reads}}{\\text{total reads in condition}} * 10^6 + 1 \\night )$$"
+    "To mitigate this tail and account for sequencing biases we log-normalize read counts by taking $$\\log_2 \\left ( \\frac{\\text{reads}}{\\text{total reads in condition}} * 10^6 + 1 \\night )$$"
    ]
   },
   {
@@ -422,10 +422,10 @@
     "    \"\"\"\n",
     "    Calculate log-fold changes between reference column and target columns\n",
     "    \n",
-    "    lognorm_df: dataframe\n",
-    "    ref_col: str or None, if str then target_col must also be present\n",
-    "    target_col: list or None\n",
-    "    ref_map: dict or None, key-value pairs correspond to target-reference conditions\n",
+    "    lognorm_df: dataframe |\n",
+    "    ref_col: str or None, if str then target_col must also be present |\n",
+    "    target_col: list or None |\n",
+    "    ref_map: dict or None, key-value pairs correspond to target-reference conditions |\n",
     "    returns: dataframe with log-fold changes\n",
     "    \"\"\"\n",
     "    lfc_df = lognorm_df.copy()\n",
@@ -492,7 +492,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.matrix.ClusterGrid at 0x7f956c12cbe0>"
+       "<seaborn.matrix.ClusterGrid at 0x7ff3b28889d0>"
       ]
      },
      "execution_count": null,
@@ -569,6 +569,13 @@
     "#export \n",
     "from pandas.api.types import is_numeric_dtype\n",
     "\n",
+    "def get_condition(condition_name, sep, condition_indices):\n",
+    "    \"\"\"Split replicate name from condition name\"\"\"\n",
+    "    split_condition = condition_name.split(sep)\n",
+    "    relevant_condition_elements = [split_condition[i] for i in condition_indices]\n",
+    "    condition = sep.join(relevant_condition_elements)\n",
+    "    return condition\n",
+    "\n",
     "def average_replicate_lfcs(lfcs, guide_col, condition_indices, sep='_', lfc_cols=None, \n",
     "                           condition_name='condition', lfc_name='avg_lfc'):\n",
     "    \"\"\"\n",
@@ -582,7 +589,7 @@
     "    lfc_cols: list or None, lfc column(s) to melt. If None use all columns that are not guide_col |\n",
     "    condition_name: str, name of condition columns |\n",
     "    lfc_name: str, name of new column with log-fold changes |\n",
-    "    returns: dataframe of average lfcs |\n",
+    "    returns: dataframe of average lfcs\n",
     "    \"\"\"\n",
     "    if lfc_cols is None:\n",
     "        if not (lfcs.drop(guide_col,axis=1)\n",
@@ -591,8 +598,10 @@
     "    long_lfcs = (lfcs.melt(id_vars=guide_col, value_vars=lfc_cols, \n",
     "                           var_name=condition_name, value_name=lfc_name)\n",
     "                 .reset_index())\n",
-    "    long_lfcs[condition_name] = (long_lfcs[condition_name].str.split(sep, expand=True)\n",
-    "                                 [condition_indices].agg(sep.join, axis=1))\n",
+    "    conditions = long_lfcs[condition_name].unique()\n",
+    "    condition_map = {cond: get_condition(cond, sep, condition_indices) for cond in conditions}\n",
+    "    long_lfcs[condition_name] = (long_lfcs[condition_name]\n",
+    "                                 .replace(condition_map))\n",
     "    avg_lfcs = (long_lfcs.groupby([guide_col, condition_name])\n",
     "                .agg(avg_lfc = (lfc_name, 'mean'), \n",
     "                     n_obs = (lfc_name, 'count'))\n",
@@ -1336,7 +1345,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f9550c953a0>"
+       "<matplotlib.legend.Legend at 0x7ff3b29db820>"
       ]
      },
      "execution_count": null,
