code (roc-auc): update roc-auc calculation to allow different inputs

--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -493,7 +493,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.matrix.ClusterGrid at 0x150b6ad30>"
+       "<seaborn.matrix.ClusterGrid at 0x15b1b47f0>"
       ]
      },
      "execution_count": null,
@@ -624,7 +624,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "avg_replicate_lfc_df = average_replicate_lfcs(lfcs=lfc_df, guide_col='sgRNA Sequence', condition_indices=[0])\n",
+    "avg_replicate_lfc_df = average_replicate_lfcs(lfcs=lfc_df, guide_col='sgRNA Sequence', condition_indices=[0], \n",
+    "                                              sep='_')\n",
     "assert np.abs(avg_replicate_lfc_df.shape[0] - read_counts.shape[0]) < 1000 "
    ]
   },
@@ -1222,25 +1223,39 @@
     "# export\n",
     "from sklearn.metrics import roc_auc_score\n",
     "\n",
-    "def get_roc_aucs(lfcs, tp_genes, fp_genes, gene_col, score_col='avg_lfc', group_col='condition'):\n",
+    "def get_roc_aucs(lfcs, tp_genes, fp_genes, gene_col, score_col=None, group_col=None, conditions=None):\n",
     "    \"\"\"\n",
-    "    Calculate the ROC-AUC between true positive and false positive gene sets\n",
+    "    Calculate the ROC-AUC between true positive and false positive gene sets. \n",
+    "    Must specificy score_col (and group_col optionally) or conditions\n",
     "    \n",
     "    lfcs: dataframe |\n",
     "    tp_genes: list-like, true positive genes |\n",
     "    fp_genes: list-like, false positive genes |\n",
     "    gene_col: str |\n",
-    "    score_col: str, column to use for ranking genes from smallest to largest |\n",
-    "    group_col: list, columns to use for grouping genes |\n",
+    "    score_col: str, column for ranking genes from smallest to largest. \n",
+    "    group_col: str or list, columns to use for grouping genes. \n",
+    "    conditions: list, columns for which to calculate ROC-AUCs\n",
     "    returns: datafrme of roc_aucs\n",
     "    \"\"\"\n",
-    "    roc_df = lfcs.copy()\n",
+    "    if conditions is not None:\n",
+    "        score_col = 'lfc'\n",
+    "        group_col = 'condition'\n",
+    "        roc_df = lfcs.melt(id_vars=gene_col, value_vars=conditions, var_name=group_col, value_name=score_col)\n",
+    "    elif score_col is not None:\n",
+    "        roc_df = lfcs.copy()\n",
+    "    else:\n",
+    "        raise ValueError('conditions or score_col must be specified')\n",
     "    roc_df = roc_df[roc_df[gene_col].isin(tp_genes) | \n",
     "                    roc_df[gene_col].isin(fp_genes)]\n",
     "    roc_df['tp'] = roc_df[gene_col].isin(tp_genes)\n",
-    "    roc_aucs = (roc_df.groupby(group_col)\n",
-    "                .apply(lambda df: roc_auc_score(df['tp'], -df[score_col]))\n",
-    "                .reset_index(name='ROC-AUC'))\n",
+    "        \n",
+    "    if score_col is not None:\n",
+    "        if group_col is not None:\n",
+    "            roc_aucs = (roc_df.groupby(group_col)\n",
+    "                        .apply(lambda df: roc_auc_score(df['tp'], -df[score_col]))\n",
+    "                        .reset_index(name='ROC-AUC'))\n",
+    "        else:\n",
+    "            roc_aucs = roc_auc_score(roc_df['tp'], -roc_df[score_col])\n",
     "    return roc_aucs"
    ]
   },
@@ -1276,6 +1291,15 @@
     "\n",
     "ess_file = 'http://tko.ccbr.utoronto.ca/Data/core-essential-genes-sym_HGNCID'\n",
     "ess_genes = pd.read_table(ess_file, names=['gene', 'gene_id'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can calulate ROC-AUCs three different ways:\n",
+    "\n",
+    "1) We can specificy a `group_col` and `score_col`"
    ]
   },
   {
@@ -1329,8 +1353,171 @@
     }
    ],
    "source": [
-    "roc_aucs = get_roc_aucs(lfcs=gene_lfcs, tp_genes=ess_genes.gene, fp_genes=noness_genes.gene, gene_col='Annotated Gene Symbol')\n",
+    "roc_aucs = get_roc_aucs(lfcs=gene_lfcs, tp_genes=ess_genes.gene, fp_genes=noness_genes.gene, gene_col='Annotated Gene Symbol', \n",
+    "                        group_col='condition', score_col='avg_lfc')\n",
     "assert roc_aucs['ROC-AUC'][0] > 0.9\n",
+    "roc_aucs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2) Since we only have one condition we can also just supply the `score_col`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.976469058284762"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "roc_aucs = get_roc_aucs(lfcs=gene_lfcs, tp_genes=ess_genes.gene, fp_genes=noness_genes.gene, gene_col='Annotated Gene Symbol', \n",
+    "                        score_col='avg_lfc')\n",
+    "roc_aucs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally, we can specificy `conditions` as a list of columns we want to calculate AUCs for"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>condition</th>\n",
+       "      <th>ROC-AUC</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>avg_lfc</td>\n",
+       "      <td>0.976469</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  condition   ROC-AUC\n",
+       "0   avg_lfc  0.976469"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "roc_aucs = get_roc_aucs(lfcs=gene_lfcs, tp_genes=ess_genes.gene, fp_genes=noness_genes.gene, gene_col='Annotated Gene Symbol',\n",
+    "                        conditions=['avg_lfc'])\n",
+    "roc_aucs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is a useful approach when we want to quantify ROC-AUC at the guide level say"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>condition</th>\n",
+       "      <th>ROC-AUC</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>A375_RepA</td>\n",
+       "      <td>0.918284</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>A375_RepB</td>\n",
+       "      <td>0.917580</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   condition   ROC-AUC\n",
+       "0  A375_RepA  0.918284\n",
+       "1  A375_RepB  0.917580"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "annotated_guide_lfcs = lfc_df.merge(guide_annotations, how='inner', on='sgRNA Sequence')\n",
+    "roc_aucs = get_roc_aucs(lfcs=annotated_guide_lfcs, tp_genes=ess_genes.gene, fp_genes=noness_genes.gene, gene_col='Annotated Gene Symbol',\n",
+    "                        conditions=['A375_RepA', 'A375_RepB'])\n",
     "roc_aucs"
    ]
   },
@@ -1349,7 +1536,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x150df4208>"
+       "<matplotlib.legend.Legend at 0x15aef6278>"
       ]
      },
      "execution_count": null,
