--- a/index.ipynb
+++ b/index.ipynb
@@ -79,6 +79,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The input data has three columns with read counts and one column with sgRNA annotations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 77441 entries, 0 to 77440\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column          Dtype \n",
+      "---  ------          ----- \n",
+      " 0   sgRNA Sequence  object\n",
+      " 1   pDNA            int64 \n",
+      " 2   A375_RepA       int64 \n",
+      " 3   A375_RepB       int64 \n",
+      "dtypes: int64(3), object(1)"
+     ]
+    }
+   ],
+   "source": [
+    "read_counts.info(memory_usage=False, null_counts=False)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -95,6 +128,87 @@
     "lognorms = pool.lognorm_columns(reads_df=read_counts, columns=['pDNA', 'A375_RepA', 'A375_RepB'])\n",
     "filtered_lognorms = pool.filter_pdna(lognorm_df=lognorms, pdna_cols=['pDNA'])\n",
     "print('Filtered ' + str(lognorms.shape[0] - filtered_lognorms.shape[0]) + ' columns due to low pDNA abundance')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that the column names for the lognorms remain the same"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 77441 entries, 0 to 77440\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column          Dtype  \n",
+      "---  ------          -----  \n",
+      " 0   sgRNA Sequence  object \n",
+      " 1   pDNA            float64\n",
+      " 2   A375_RepA       float64\n",
+      " 3   A375_RepB       float64\n",
+      "dtypes: float64(3), object(1)"
+     ]
+    }
+   ],
+   "source": [
+    "lognorms.info(memory_usage=False, null_counts=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lfc_df = pool.calculate_lfcs(lognorm_df=filtered_lognorms, ref_col='pDNA', target_cols=['A375_RepA', 'A375_RepB'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We drop the pDNA column after calculating log-fold changes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 76865 entries, 0 to 77440\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column          Dtype  \n",
+      "---  ------          -----  \n",
+      " 0   sgRNA Sequence  object \n",
+      " 1   A375_RepA       float64\n",
+      " 2   A375_RepB       float64\n",
+      "dtypes: float64(2), object(1)"
+     ]
+    }
+   ],
+   "source": [
+    "lfc_df.info(memory_usage=False, null_counts=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since we only have two conditions it's easy to visualize replicates as a point densityplot using [gpplot](https://github.com/gpp-rnd/gpplot)"
    ]
   },
   {
@@ -116,7 +230,6 @@
     }
    ],
    "source": [
-    "lfc_df = pool.calculate_lfcs(lognorm_df=filtered_lognorms, ref_col='pDNA', target_cols=['A375_RepA', 'A375_RepB'])\n",
     "plt.subplots(figsize=(4,4))\n",
     "gpplot.point_densityplot(data=lfc_df, x='A375_RepA', y='A375_RepB')\n",
     "gpplot.add_correlation(data=lfc_df, x='A375_RepA', y='A375_RepB')\n",
@@ -143,7 +256,68 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Before combining sgRNAs at the gene level, it's sometimes helpful to group controls into pseudo-genes so they're easier to compare with target genes."
+    "After averaging log-fold changes our dataframe is melted, so the condition column specifies the experimental condition (A375 here) and the n_obs specfies the number of replicates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 76865 entries, 0 to 76864\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column          Dtype  \n",
+      "---  ------          -----  \n",
+      " 0   sgRNA Sequence  object \n",
+      " 1   condition       object \n",
+      " 2   avg_lfc         float64\n",
+      " 3   n_obs           int64  \n",
+      "dtypes: float64(1), int64(1), object(2)"
+     ]
+    }
+   ],
+   "source": [
+    "avg_replicate_lfc_df.info(memory_usage=False, null_counts=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Before combining sgRNAs at the gene level, it's sometimes helpful to group controls into pseudo-genes so they're easier to compare with target genes. Our annotation file maps from sgRNA sequences to gene symbols"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 77441 entries, 0 to 77440\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column                 Dtype \n",
+      "---  ------                 ----- \n",
+      " 0   sgRNA Sequence         object\n",
+      " 1   Annotated Gene Symbol  object\n",
+      " 2   Annotated Gene ID      object\n",
+      "dtypes: object(3)"
+     ]
+    }
+   ],
+   "source": [
+    "remapped_annotations = pool.group_pseudogenes(annotations=guide_annotations, pseudogene_size=4, \n",
+    "                                              gene_col='Annotated Gene Symbol', \n",
+    "                                              control_regex=['NO_CURRENT'])\n",
+    "remapped_annotations.info(memory_usage=False, null_counts=False)"
    ]
   },
   {
@@ -159,11 +333,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "remapped_annotations = pool.group_pseudogenes(annotations=guide_annotations, pseudogene_size=4, \n",
-    "                                              gene_col='Annotated Gene Symbol', \n",
-    "                                              control_regex=['NO_CURRENT'])\n",
     "gene_lfcs = pool.average_gene_lfcs(lfcs=avg_replicate_lfc_df, annotations=remapped_annotations, gene_col='Annotated Gene Symbol',\n",
     "                                   merge_on='sgRNA Sequence', controls_to_z='NO_CURRENT')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `controls_to_z` can be used which to specify which genes to use as a null distribution when z-scoring log-fold changes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 19363 entries, 0 to 19362\n",
+      "Data columns (total 7 columns):\n",
+      " #   Column                 Dtype  \n",
+      "---  ------                 -----  \n",
+      " 0   condition              object \n",
+      " 1   Annotated Gene Symbol  object \n",
+      " 2   avg_lfc                float64\n",
+      " 3   n_obs                  int64  \n",
+      " 4   ctl_mean               float64\n",
+      " 5   ctl_sd                 float64\n",
+      " 6   avg_lfc_z-score        float64\n",
+      "dtypes: float64(4), int64(1), object(2)"
+     ]
+    }
+   ],
+   "source": [
+    "gene_lfcs.info(memory_usage=False, null_counts=False)"
    ]
   },
   {
@@ -210,17 +417,80 @@
     }
    ],
    "source": [
-    "roc_aucs = pool.get_roc_aucs(lfcs=gene_lfcs, tp_genes=ess_genes.gene, fp_genes=noness_genes.gene, gene_col='Annotated Gene Symbol')\n",
-    "assert roc_aucs['ROC-AUC'][0] > 0.9\n",
+    "roc_aucs = pool.get_roc_aucs(lfcs=gene_lfcs, tp_genes=ess_genes.gene, fp_genes=noness_genes.gene, \n",
+    "                             gene_col='Annotated Gene Symbol', score_col='avg_lfc', group_col='condition')\n",
     "print('ROC-AUC: ' + str(round(roc_aucs['ROC-AUC'].values[0], 3)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that we can also use this function to calculate roc-aucs at the guide level"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>condition</th>\n",
+       "      <th>ROC-AUC</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>A375_RepA</td>\n",
+       "      <td>0.918284</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>A375_RepB</td>\n",
+       "      <td>0.917580</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   condition   ROC-AUC\n",
+       "0  A375_RepA  0.918284\n",
+       "1  A375_RepB  0.917580"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "annotated_guide_lfcs = lfc_df.merge(guide_annotations, how='inner', on='sgRNA Sequence')\n",
+    "roc_aucs = pool.get_roc_aucs(lfcs=annotated_guide_lfcs, tp_genes=ess_genes.gene, fp_genes=noness_genes.gene, gene_col='Annotated Gene Symbol',\n",
+    "                             conditions=['A375_RepA', 'A375_RepB'])\n",
+    "roc_aucs"
+   ]
   }
  ],
  "metadata": {
