bug (packages): add statsmodels and scipy to requirements

--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -972,6 +972,7 @@
     "import scipy\n",
     "from statsmodels.stats.multitest import multipletests\n",
     "from sklearn.linear_model import LogisticRegression\n",
+    "import pandas as pd\n",
     "\n",
     "\n",
     "def get_control_lfcs(annotated_lfcs, controls, gene_col):\n",
