--- a/index.ipynb
+++ b/index.ipynb
@@ -4,6 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "[![PyPI version](https://badge.fury.io/py/poola.svg)](https://badge.fury.io/py/poola)\n",
+    "\n",
     "# poola\n",
     "\n",
     "> Python package for pooled screen analysis"
