--- a/index.ipynb
+++ b/index.ipynb
@@ -6,8 +6,6 @@
    "source": [
     "# poola\n",
     "\n",
-    "[![PyPI version](https://badge.fury.io/py/poola.svg)](https://badge.fury.io/py/poola)\n",
-    "\n",
     "> Python package for pooled screen analysis"
    ]
   },
@@ -31,13 +29,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Or install the most recent distribution from PyPi:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "Or install the most recent distribution from PyPi:\n",
+    "\n",
+    "[![PyPI version](https://badge.fury.io/py/poola.svg)](https://badge.fury.io/py/poola)\n",
+    "\n",
     "`pip install poola`"
    ]
   },
