code (avg_lfcs): add condition_map option

--- a/index.ipynb
+++ b/index.ipynb
@@ -60,7 +60,9 @@
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "import gpplot\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import stringdb\n",
+    "import datetime"
    ]
   },
   {
@@ -237,7 +239,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "avg_replicate_lfc_df = pool.average_replicate_lfcs(lfcs=lfc_df, guide_col='sgRNA Sequence', condition_indices=[0], sep='_')"
+    "avg_replicate_lfc_df = pool.average_replicate_lfcs(lfcs=lfc_df, guide_col='sgRNA Sequence', condition_indices=[0],\n",
+    "                                                   sep='_')"
    ]
   },
   {
@@ -451,13 +454,6 @@
     "gpplot.add_xy_line()\n",
     "sns.despine()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
