bug (stringdb): remove stringdb import

--- a/index.ipynb
+++ b/index.ipynb
@@ -60,9 +60,7 @@
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "import gpplot\n",
-    "import matplotlib.pyplot as plt\n",
-    "import stringdb\n",
-    "import datetime"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
