bug (reset_index): remove name kwarg

--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -383,7 +383,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "<seaborn.matrix.ClusterGrid at 0x7f8435ddf6a0>"
+      "text/plain": "<seaborn.matrix.ClusterGrid at 0x7fcb3a283748>"
      },
      "execution_count": null,
      "metadata": {},
@@ -1003,7 +1003,9 @@
     "gene_lfcs_copy = gene_lfcs.copy()\n",
     "gene_lfcs_copy['z_essential'] = (gene_lfcs_copy['z_scored_avg_lfc_fdr'] < 0.1) & (gene_lfcs_copy['z_scored_avg_lfc'] < 0)\n",
     "gene_lfcs_copy['p_essential'] = (gene_lfcs_copy['probability_positive_control'] > 0.5)\n",
-    "scoring_overlap = gene_lfcs_copy[['z_essential', 'p_essential']].value_counts().reset_index(name='n')\n",
+    "scoring_overlap = (gene_lfcs_copy[['z_essential', 'p_essential']].value_counts()\n",
+    "                   .reset_index()\n",
+    "                   .rename({0: 'n'}, axis=1))\n",
     "agree = scoring_overlap.loc[(scoring_overlap['z_essential'] == scoring_overlap['p_essential']), 'n'].sum()\n",
     "disagree = scoring_overlap.loc[(scoring_overlap['z_essential'] != scoring_overlap['p_essential']), 'n'].sum()\n",
     "accuracy = agree/(agree + disagree)\n",
@@ -1106,7 +1108,8 @@
     "    if condition_col is not None:\n",
     "        roc_aucs = (roc_df.groupby(condition_col)\n",
     "                    .apply(lambda df: roc_auc_score(df['tp'], pos_control_direction * df[score_col]))\n",
-    "                    .reset_index(name='ROC-AUC'))\n",
+    "                    .reset_index()\n",
+    "                    .rename({0: 'ROC-AUC'}, axis=1))\n",
     "        tpr_fpr_df_list = []\n",
     "        for group, df in roc_df.groupby(condition_col):\n",
     "            fpr, tpr, treshold = roc_curve(df['tp'], pos_control_direction * df[score_col])\n",
@@ -1342,7 +1345,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "<matplotlib.legend.Legend at 0x7f841a8b1550>"
+      "text/plain": "<matplotlib.legend.Legend at 0x7fcb1e46af28>"
      },
      "execution_count": null,
      "metadata": {},
